# FastRename

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
docs/: FastRename_Development.md  FastRename_PRD.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs  rename.rs  settings.rs
src-tauri/src/domain/: app_error.rs  file_entry.rs  mod.rs  rename_history.rs  settings.rs  validation.rs
src-tauri/src/platform/: windows.rs
src/components/FileTable/: FileTable.tsx
src/hooks/: useColumnResize.ts
src/lib/: commands.ts  format.ts  validation.ts
src/types/: file.ts  settings.ts
