[package]
name = "fastrename"
version = "0.1.0"
description = "A Windows desktop tool for fast, precise file renaming."
authors = ["FastRename Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fastrename_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fastrename"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
